<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spritzinc.android.sdk.sample.helloworld.MainActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvLoggedInUserLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Logged in user:" />

            <TextView
                android:id="@+id/tvLoggedInUser"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_main_login"
                android:onClick="onBtnLoginClick"
            />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/flSpritzViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <!-- The content will be chosen dynamically -->

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnPlayClick"
                android:text="Play"
                android:textSize="6pt" />

            <Button
                android:id="@+id/btnPause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnPauseClick"
                android:text="Pause"
                android:textSize="6pt" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnBackupClick"
                android:text="Back"
                android:textSize="6pt" />

            <Button
                android:id="@+id/btnForward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnForwardClick"
                android:text="Forward"
                android:textSize="6pt" />

            <Button
                android:id="@+id/btnRewind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onBtnRewindClick"
                android:text="Rewind"
                android:textSize="6pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnResetClick"
                android:text="Reset"
                android:textSize="6pt" />

            <Button
                android:id="@+id/btnSlower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnSlowerClick"
                android:text="Slower"
                android:textSize="6pt" />

            <Button
                android:id="@+id/btnFaster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBtnFasterClick"
                android:text="Faster"
                android:textSize="6pt" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Info: "
        />

        <RadioGroup
            android:id="@+id/rgMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rbModeLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Load"
            />

            <RadioButton
                android:id="@+id/rbModeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:checked="true"
            />

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_btnHelloWeb_text"
            android:onClick="onBtnHelloWebClick"
        />

        <Button
            android:id="@+id/editField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBtnHelloWeb2Click"
            android:text="@string/activity_main_btnHelloWeb2_text" />
        
        <EditText
            android:id="@+id/inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:text="@string/edit_text" />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:onClick="onBtnClearClick"
            android:text="@string/activity_main_btnClear_text" />

    </LinearLayout>

</ScrollView>
